1999-08-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* src/io-png.c (image_save): Fixed compiler warnings.  Fixed write
	to unallocated memory (row_ptr), and fixed its type as well.  Take
	into account the ArtPixbuf's rowstride when assigning the row
	pointers.

	* src/gdk-pixbuf.c: Fixup includes.

	* src/gdk-pixbuf-io.c: Likewise.

Sat Jul 31 19:19:47 CEST 1999

	* src/gdk-pixbuf-io.c:
	* src/io-png.c: Fixed two obvious C syntax bugs

1999-07-29  Mark Crichton  <crichton@gimp.org>

	* src/io-png.c (image_save): Added PNG saving function

	* src/gdk-pixbuf-io.c: Changed image_save function format.  Now it's
	image_save(GdkPixBuf *p, FILE *f, ...)
	

1999-07-26  Michael Zucchi  <mzucchi@denr.sa.gov.au>

	* src/Makefile.am (*_LIB): Only build the relevant loaders which
	require extra libraries if we actually have those libraries.

1999-07-23  Richard Hestilow  <hestgray@ionet.net>
	
	* src/gdk-pixbuf.h: Include glib.h as it uses g* datatypes
	* gdk_pixbufConf.sh.in: Added for gnome-config
	* Makefile.am:
	* configure.in: Modified to generate gdk_pixbufConf.sh

1999-07-20  Mark Crichton  <crichton@gimp.org>

	* src/gdk-pixbuf.c (gdk_pixbuf_rotate): Fixed rotation.  Now a bbox
	calculation needs to be done.

1999-07-18  Larry Ewing  <lewing@gimp.org>

	* src/io-xpm.c:
	* src/io-gif.c:
	* src/io-png.c:
	* src/io-jpeg.c: Fix a few memory leaks in the, most of them in
	error cases but one or two in the common case.  There are probably
	a few small ones left.
	
1999-07-18  Mark Crichton  <crichton@gimp.org>

	* configure.in: removed version.h. 

	* src/gdk-pixbuf-io.c (pixbuf_check_tiff): Minor readability
	improvements.

1999-07-17  Mark Crichton  <crichton@gimp.org>

	* src/gdk-pixbuf.c: Removed gdk_pixbuf_free, redundant code.
	(gdk_pixbuf_rotate): Added pixbuf rotation code.
	(gdk_pixbuf_scale): Changed // comments to /* */

	* src/gdk-pixbuf.h (gdk_pixbuf_destroy): Added gdk_pixbuf_destroy
	function to header.

1999-07-16  Larry Ewing  <lewing@gimp.org>
